fixed alignment for all h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,10 @@
   width: 24px;
   margin-bottom: 16px;
 }
+
+h1,
+h4,
+.skill-icons,
+.about {
+  text-align: center;
+}
